fixed overflowing text on card generator

--- a/stylesheets/cards.styl
+++ b/stylesheets/cards.styl
@@ -30,21 +30,21 @@ button.cardContainer
   display: grid
   grid-template-rows: 10% 25% 9% 50% 6%
   grid-template-columns: 77% 23%
+  grid-template-areas: 'header header' 'art art' 'type type' 'txt txt' 'footL footR'
   place-items: stretch
 
-row-classes = ('.genHeader' '.genArtBox''.genTypeBox' '.genTextBox')
-for class, row in row-classes
-  {class}
-    grid-column: 1 / 3
-    grid-row: row + 1/ row + 2
-
+.genHeader
+  grid-area: header
+.genArtBox
+  grid-area: art
+.genTypeBox
+  grid-area: type
+.genTextBox
+  grid-area: txt
 .genFooterDfc
-  grid-column: 1 / 2
-  grid-row: 5 / 6
-
+  grid-area: footL
 .genFooterNums 
-  grid-column: 2 / 3
-  grid-row: 5 / 6
+  grid-area: footR
 
 .card, .genCard, .cardImage,
 .cardBgd, .cardBgdFoil 
@@ -120,17 +120,12 @@ for class, row in row-classes
 
 .genTextBox
   display: flex
-  flex-direction: column
-  justify-content: center
+  overflow: visible auto
 
 .genName, .genType,
-.genMana, .genRarity 
+.genMana, .genRarity,
+.genTextContainer
   margin: auto 0
-
-.genName, .genType 
-  white-space: nowrap
-  overflow: hidden
-  text-overflow: ellipsis
 
 
 /* Card text formatting */
@@ -139,13 +134,14 @@ for class, row in row-classes
   font-family: serif
 
 .genType 
-  font-size: 0.8rem
+  font-size: 0.7rem
+  font-weight: bold
 
 .genRarity 
   font-size: 0.6rem
 
 .genName 
-  font-size: 0.99rem
+  font-size: 0.9rem
   font-weight: bold
 
 .genMana 
@@ -157,9 +153,8 @@ for class, row in row-classes
   letter-spacing: 0.03em
 
 .genTextBox
-  font-size: 0.78rem
+  font-size: 0.75rem
   text-align: left
-  overflow: hidden
 
 /* main text paragraph spacing */
 p.genText
